# rsomics-vcf-setgt

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  driver.rs  lib.rs  newgt.rs  record.rs  target.rs
tests/: compat.rs
tests/golden/: fmt_zero_sample.vcf  query.vcf  sites_only.vcf  small.vcf
