[package]
name = "rsomics-vcf-setgt"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-setgt"
authors = ["Zane Leong <efd@live.com>"]
description = "Conditionally rewrite VCF genotypes — Rust port of bcftools +setGT"

[[bin]]
name = "rsomics-vcf-setgt"
path = "src/main.rs"


[lib]
name = "rsomics_vcf_setgt"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-vcf-expr = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }

[dev-dependencies]
tempfile = "3"
